# tauri-local-first

./: .gitignore  .prettierIgnore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
.specify/memory/: constitution.md
apps/hostsManager/: UPDATELOG.md  package.json  tsconfig.json  vite.config.ts
apps/hostsManager/.github/workflows/: release.yml
apps/hostsManager/src/: App.css  App.tsx  commands.ts  constants.ts  main.tsx  store.tsx  typing.ts
apps/hostsManager/src-tauri/: Cargo.toml  tauri.conf.json  tlfsuite.json
apps/hostsManager/src-tauri/capabilities/: default.json
apps/hostsManager/src-tauri/hostsmanager/: list.json
apps/hostsManager/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/hostsManager/src/components/Editor/: index.module.less  index.tsx
apps/hostsManager/src/components/List/: index.module.less  index.tsx
apps/hostsManager/src/components/TreeExplorer/: index.module.less  index.tsx
apps/hostsManager/src/hooks/: useContent.ts  useList.ts
apps/hostsManager/src/utils/: treeOps.ts  writeHostsToSystem.ts
apps/launcher/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/launcher/src/: main.tsx
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/launcher/src-tauri/src/adapters/: linux.rs  macos.rs  mod.rs  windows.rs
apps/launcher/src-tauri/src/commands/: intent.rs
apps/launcher/src-tauri/tests/: intent_command_stub.rs  intent_history.rs  intent_timeout.rs
apps/launcher/src/modules/: App.tsx
apps/launcher/src/test/: intent-panel.int.test.tsx  setup.ts
crates/descriptor/: Cargo.toml
crates/descriptor/src/: lib.rs
crates/intent_core/: Cargo.toml
crates/intent_core/benches/: plan_bench.rs
crates/intent_core/src/: concurrency.rs  conflict.rs  executor.rs  lib.rs  model.rs  parser.rs  plan.rs  signature.rs  util.rs
crates/intent_core/src/descriptor/: mod.rs
crates/intent_core/src/history/: mod.rs  sqlite_store.rs
crates/intent_core/tests/: it_conflict.rs  it_history_cache.rs  perf_normalize_plan.rs
crates/intent_core/tests/intent/: it_concurrency.rs  it_dry_run.rs  it_timeout.rs
crates/invocation/: Cargo.toml
crates/invocation/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
docs/: BACKLOG.md  CONVENTIONS.md  ROADMAP.md  descriptors.md  descriptors.schema.json  mvp-issue-breakdown.md
specs/001-tauri-mcp-stdio/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tauri-mcp-stdio/contracts/: json-schemas.md  tauri-commands.md
specs/001-tauri-rust-mcp/: spec.md
src/: App.tsx  commands.ts  events.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/Editor/extensions/: lang-hosts.ts
src/components/List/: index.tsx
src/components/Main/: index.tsx
src/components/promptSystemPassword/: index.module.less
src/hooks/: useEvent.ts
src/utils/: tryParseJson.ts  writeHostsToSystem.ts
(+6 files in other folders)
