[package]
name = "descriptor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TLFSuite application descriptor parsing and validation"
authors = ["Project Contributors"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
