[package]
name = "intent_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "intent_core"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"
smallvec = { version = "1", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread","time","macros"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
regex = "1"

[dev-dependencies]
serde_json = "1"
