[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

tauri = { version = "2", features = ["tray-icon"] }

tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
# Deep link 插件（v2）
# tauri-plugin-deep-link = "2"  # 如使用社区插件，请按需要启用

[features]
default = []
